--- a/KinectSensorStreams/View/MainWindow.xaml
+++ b/KinectSensorStreams/View/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:toolkit="clr-namespace:CommunityToolkit.Mvvm.Input;assembly=CommunityToolkit.Mvvm"
         xmlns:local="clr-namespace:KinectSensorStreams.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
@@ -29,7 +30,7 @@
                      Height="30"
                      Fill="{Binding Path=EllipseColor}"
                      Grid.Column="1"/>
-            <TextBlock Text="Running"
+            <TextBlock Text="{Binding KinectManager.StatusText}"
                        VerticalAlignment="Center"
                        FontWeight="Bold"
                        Grid.Column="3"/>
