ADD : changements mineurs body stream

--- a/KinectSensorStreams/View/MainWindow.xaml
+++ b/KinectSensorStreams/View/MainWindow.xaml
@@ -115,25 +115,7 @@
                      Height="400"
                      Width="400">
                 <!--<Image Source="{Binding KinectStream.Bitmap}"/>-->
-                <ItemsControl ItemsSource="{Binding KinectStream.Bodies}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Canvas>
-                                <ItemsControl ItemsSource="{Binding Joints.Values}">
-                                    <ItemsControl.ItemTemplate>
-                                        <DataTemplate>
-                                            <Ellipse Width="10" Height="10" Fill="Red">
-                                                <Ellipse.RenderTransform>
-                                                    <TranslateTransform X="{Binding JointPoints[HandRight].X}" Y="{Binding JointPoints[HandRight].Y}" />
-                                                </Ellipse.RenderTransform>
-                                            </Ellipse>
-                                        </DataTemplate>
-                                    </ItemsControl.ItemTemplate>
-                                </ItemsControl>
-                            </Canvas>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+                <Grid x:Name="DisplayGrid" Background="Black" Width="512" Height="414"/>
             </Viewbox>
         </Grid>
     </Grid>
