--- a/PenaltyMaster3000/View/MainView.xaml
+++ b/PenaltyMaster3000/View/MainView.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="PenaltyMaster3000.View.MainView"
+﻿<UserControl x:Class="PenaltyMaster3000.View.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PenaltyMaster3000.View"
         mc:Ignorable="d"
-        Title="MainView" Height="450" Width="800">
+        Height="Auto" Width="Auto">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="/Images/goal_background.jpg" 
                         Stretch="UniformToFill"/>
         </Grid.Background>
-
+        
         <Grid Margin="110,101,128,59">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -28,31 +28,85 @@
                    Grid.RowSpan="2"
                    Grid.Column="0"
                    Visibility="Hidden"/>
+            <Image Source="/Images/football_ball.png" 
+                   Width="50"
+                   Height="50"
+                   Grid.Row="0"
+                   Grid.RowSpan="2"
+                   Grid.Column="0"
+                   Visibility="Hidden"/>
+            
             <Image Source="/Images/goalkeeper_top_middle.png"
                    Grid.Row="0"
                    Grid.RowSpan="2"
                    Grid.Column="1"
                    Visibility="Hidden"/>
+            <Image Source="/Images/football_ball.png" 
+                   Width="50"
+                   Height="50"
+                   Grid.Row="0"
+                   Grid.RowSpan="2"
+                   Grid.Column="1"
+                   Visibility="Hidden"/>
+            
             <Image Source="/Images/goalkeeper_top_left.png"
                    Grid.Row="0"
                    Grid.RowSpan="2"
                    Grid.Column="2"
                    Visibility="Hidden"/>
+            <Image Source="/Images/football_ball.png" 
+                   Width="50"
+                   Height="50"
+                   Grid.Row="0"
+                   Grid.RowSpan="2"
+                   Grid.Column="2"
+                   Visibility="Hidden"/>
+            
             <Image Source="/Images/goalkeeper_down_right.png"
                    Grid.Row="1"
                    Grid.RowSpan="2"
                    Grid.Column="0"
                    Visibility="Hidden"/>
+            <Image Source="/Images/football_ball.png" 
+                   Width="50"
+                   Height="50"
+                   Grid.Row="1"
+                   Grid.RowSpan="2"
+                   Grid.Column="0"
+                   Visibility="Hidden"/>
+            
             <Image Source="{Binding CurrentImageSource}"
                    Grid.Row="1"
                    Grid.RowSpan="2"
-                   Grid.Column="1"/>
+                   Grid.Column="1"
+                   Visibility="Visible"/>
+            <Image Source="/Images/football_ball.png" 
+                   Width="50"
+                   Height="50"
+                   Grid.Row="1"
+                   Grid.RowSpan="2"
+                   Grid.Column="1"
+                   Visibility="Hidden"/>
+            
             <Image Source="/Images/goalkeeper_down_left.png"
+                   Grid.Row="1"
+                   Grid.RowSpan="2"
+                   Grid.Column="2"
+                   Visibility="Hidden"/>
+            <Image Source="/Images/football_ball.png" 
+                   Width="50"
+                   Height="50"
                    Grid.Row="1"
                    Grid.RowSpan="2"
                    Grid.Column="2"
                    Visibility="Hidden"/>
         </Grid>
 
+        <Image Source="/Images/football_ball.png" 
+               Width="50"
+               Height="50"
+               VerticalAlignment="Bottom"
+               Visibility="Visible"/>
+
     </Grid>
-</Window>
+</UserControl>
