--- a/PenaltyMaster3000/View/MainView.xaml
+++ b/PenaltyMaster3000/View/MainView.xaml
@@ -175,9 +175,9 @@
 
             <Grid>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -194,34 +194,119 @@
                 </Grid.Background>
 
                 <Grid Grid.Column="1"
-                  Grid.Row="1">
+                      Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
                     <!-- Score de l'équipe 1 -->
                     <TextBlock Text="{Binding Player1ScoreText}" 
-                           Foreground="White" 
-                           FontSize="80"
-                           HorizontalAlignment="Left"
-                           VerticalAlignment="Center"
-                           Margin="20,0,0,0"/>
+                               Foreground="White" 
+                               FontSize="80"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Margin="20,0,0,0"
+                               Grid.Column="0"/>
 
                     <!-- Séparateur central -->
                     <TextBlock Text="-" 
-                           Foreground="White" 
-                           FontSize="80"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"/>
+                               Foreground="White" 
+                               FontSize="80"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Grid.Column="1"/>
 
                     <!-- Score de l'équipe 2 -->
                     <TextBlock Text="{Binding Player2ScoreText}" 
-                           Foreground="White" 
-                           FontSize="80"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Center"
-                           Margin="0,0,20,0"/>
+                               Foreground="White" 
+                               FontSize="80"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Margin="0,0,20,0"
+                               Grid.Column="2"/>
                 </Grid>
 
             </Grid>
             
         </Border>
-        
+
+        <Border Margin="80"
+                BorderBrush="#FF2196F3" 
+                Background="#FFFFFF"
+                BorderThickness="2" 
+                CornerRadius="10" 
+                Padding="20"
+                Grid.Row="1"
+                Visibility="{Binding FinalResultVisibility}">
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <!-- Fond du panneau d'affichage -->
+                <Grid.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Color="#3F51B5" Offset="0"/>
+                        <GradientStop Color="#2196F3" Offset="1"/>
+                    </LinearGradientBrush>
+                </Grid.Background>
+
+                <Grid Grid.Column="0"
+                      Grid.ColumnSpan="3"
+                      Grid.Row="0">
+                    <TextBlock Text="{Binding FinalWinnerText}" 
+                           Foreground="White" 
+                           FontSize="40"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Margin="20,0,0,0"/>
+                </Grid>
+
+                <Grid Grid.Column="1"
+                      Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <!-- Score de l'équipe 1 -->
+                    <TextBlock Text="{Binding Player1ScoreText}" 
+                               Foreground="White" 
+                               FontSize="80"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Margin="20,0,0,0"
+                               Grid.Column="0"/>
+
+                    <!-- Séparateur central -->
+                    <TextBlock Text="-" 
+                               Foreground="White" 
+                               FontSize="80"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Grid.Column="1"/>
+
+                    <!-- Score de l'équipe 2 -->
+                    <TextBlock Text="{Binding Player2ScoreText}" 
+                               Foreground="White" 
+                               FontSize="80"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Margin="0,0,20,0"
+                               Grid.Column="2"/>
+                </Grid>
+
+            </Grid>
+
+        </Border>
+
     </Grid>
 </UserControl>
