--- a/PenaltyMaster3000/View/MainView.xaml
+++ b/PenaltyMaster3000/View/MainView.xaml
@@ -75,7 +75,7 @@
                    Grid.Column="0"
                    Visibility="{Binding VsMgr.BallDownRightVisibility}"/>
 
-            <Image Source="{Binding VsMgr.CurrentImageSource}"
+            <Image Source="{Binding CurrentImageSource}"
                    Grid.Row="1"
                    Grid.RowSpan="2"
                    Grid.Column="1"
@@ -111,7 +111,7 @@
                Width="50"
                Height="50"
                VerticalAlignment="Bottom"
-               Visibility="{Binding VsMgr.Starterball}"/>
+               Visibility="{Binding VsMgr.StarterBall}"/>
 
         <Grid>
             <Grid.RowDefinitions>
